tests/build/cases/widget_new/missing_value_before_when1.stderr
error: expected `;`
 --> cases/widget_new/missing_value_before_when1.rs:7:9
  |
7 |         when *#is_pressed {
  |         ^^^^

error[E0061]: this method takes 1 argument but 0 arguments were supplied
  --> cases/widget_new/missing_value_before_when1.rs:6:9
   |
5  |       let _ = Wgt! {
   |  _____________-
6  | |         margin = // missing 0; here
   | |         ^^^^^^
7  | |         when *#is_pressed {
8  | |             margin = 20;
9  | |         }
10 | |     };
   | |_____- an argument is missing
   |
note: associated function defined here
  --> $WORKSPACE/zero-ui/src/properties/layout.rs
   |
   | pub fn margin(child: impl UiNode, margin: impl IntoVar<SideOffsets>) -> impl UiNode {
   |        ^^^^^^
help: provide the argument
  --> $WORKSPACE/zero-ui/src/widgets.rs
   |
   | margin(/* margin */)
   |
